# azeno

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  README.MD  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
bank/: .eslintignore  .eslintrc.json  (+9 more)
quiz/backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  conftest.py  entrypoint.sh  install-poetry.py  mypy.ini  pyproject.toml  pytest.ini
quiz/backend/config/: settings.py  settings_logging.py  urls.py  wsgi.py
quiz/backend/docs/: conf.py  helpers.gen_username.rst  helpers.rst  helpers.tests.rst  helpers.validators.rst  index.rst  modules.rst  players.migrations.rst  players.rst  players.tests.rst  stats.migrations.rst  stats.rst  stats.tests.rst
quiz/backend/fixtures/: example_badges.json  example_data.json  example_player_profile_data.json
quiz/backend/helpers/gen_username/: README.MD  generate.py
quiz/backend/helpers/gen_username/data/: useradj.txt  usernoun.txt
quiz/backend/helpers/tests/: test_generate.py  test_validators.py
quiz/backend/helpers/validators/: validators.py
quiz/backend/players/: admin.py  models.py  serializers.py  urls.py  views.py
quiz/backend/players/migrations/: 0001_initial.py  0002_profile.py
quiz/backend/players/tests/: test_models.py  test_serializers.py  test_views.py
quiz/backend/quiz-venv/: pyproject.toml
quiz/backend/stats/: admin.py  models.py  serializers.py  urls.py  views.py
quiz/backend/stats/migrations/: 0001_initial.py  0002_playerbadge_badge_players.py
quiz/backend/stats/tests/: test_models.py  test_views.py
quiz/backend/users/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
quiz/backend/users/migrations/: 0001_initial.py  0002_superuser.py  0003_alter_customuser_username.py
quiz/backend/users/tests/: test_commands.py  test_models.py
(+371 files in other folders)
