[tool.poetry]
name = "quiz"
version = "0.1.0"
description = "virtual environment for quiz application"
authors = ["Azeno Team"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
psycopg2 = "2.9.5"
dj-database-url = "1.2.0"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
sphinx = "6.1.3"
sphinx-rtd-theme = "1.2.0"
django-debug-toolbar = "3.8.1"
coverage = "7.2.1"
pytest-cov = "4.0.0"
pytest = "7.2.2"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
