[tool.poetry]
name = "quiz-venv"
version = "0.1.0"
description = "virtual environment for quiz application"
authors = [""]
packages = [{include = "quiz_venv"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
